2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: allow to configure the
	out-of-gamut warning color.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* modules/colorsel_cmyk_lcms.c: always use the configured CMYK
	profile, regardless of the color management mode.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-in-menu-path.c (plug_in_menu_path_map):
	rewritten array handling to make the IRIX MIPSpro compiler happy
	(bug #483619).

2007-10-05  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.[ch]: added settings for marking
	out-of-gamut colors in the Print Simulation (bug #476824).

	* app/dialogs/preferences-dialog.c: added a check-button for the
	out-of-gamut warning and tweaked the layout of the Color Management
	page to make the relationship of the settings more obvious.

	* modules/cdisplay_lcms.c: mark out-of-gamut colors.

2007-10-04  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c
	* modules/cdisplay_proof.c
	* modules/colorsel_cmyk_lcms.c
	* plug-ins/common/lcms.c 
	* plug-ins/jpeg/jpeg-load.c: use cmsFLAGS_BLACKPOINTCOMPENSATION
	instead of the equivalent cmsFLAGS_WHITEBLACKCOMPENSATION.

2007-10-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (jpeg_load_cmyk_transform): use the
	display rendering intent as set in the user's color management
	preferences. Use black point compensation if the rendering intent
	is relative colorimetric.

	* modules/colorsel_cmyk_lcms.c: same change here.

2007-10-03  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: use black point compensation if the
	rendering intent is relative colorimetric.

	* plug-ins/common/lcms.c: use the display rendering intent as set
	in the user's color management preferences as the default for the
	color conversion. Default to using black point compensation if the
	rendering intent is relative colorimetric (bug #475983).

2007-10-03  Sven Neumann  <sven@gimp.org>
